--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fundo006</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center center;
+            background-attachment: fixed;*/
+
+            /*
+            Shorthand - background
+            color > image > position > repeat > [size] > attachment 
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center cover fixed;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,6 +34,8 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tenetur provident ipsa exercitationem reiciendis blanditiis obcaecati, eveniet asperiores dolor debitis ea laudantium facilis alias magni maiores deserunt minus quibusdam eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis laudantium est, voluptatum possimus eos sint explicabo consequatur aliquam soluta quo? Aliquam fugit necessitatibus reprehenderit recusandae repellat dolorum sequi exercitationem quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eos optio magnam molestias, deleniti doloribus repellendus. Aspernatur, quos dolores? Ipsum sapiente qui neque quisquam, ipsam voluptatem animi illo quod fugit?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tenetur provident ipsa exercitationem reiciendis blanditiis obcaecati, eveniet asperiores dolor debitis ea laudantium facilis alias magni maiores deserunt minus quibusdam eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis laudantium est, voluptatum possimus eos sint explicabo consequatur aliquam soluta quo? Aliquam fugit necessitatibus reprehenderit recusandae repellat dolorum sequi exercitationem quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eos optio magnam molestias, deleniti doloribus repellendus. Aspernatur, quos dolores? Ipsum sapiente qui neque quisquam, ipsam voluptatem animi illo quod fugit?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tenetur provident ipsa exercitationem reiciendis blanditiis obcaecati, eveniet asperiores dolor debitis ea laudantium facilis alias magni maiores deserunt minus quibusdam eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis laudantium est, voluptatum possimus eos sint explicabo consequatur aliquam soluta quo? Aliquam fugit necessitatibus reprehenderit recusandae repellat dolorum sequi exercitationem quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eos optio magnam molestias, deleniti doloribus repellendus. Aspernatur, quos dolores? Ipsum sapiente qui neque quisquam, ipsam voluptatem animi illo quod fugit?</p>
     </main>
 </body>
